# api_go/routers/setupRouter.go
@@ -311,6 +311,7 @@ func SetupRouter(queries *db.Queries, config config.AppConfig, logger *zap.Sugar
 		r.Get("/:clubId/events/:eventId", controllers.GetClubEvent)
 		r.Put("/:clubId/events/:eventId", controllers.UpdateClubEvent)
 		r.Post("/:clubId/events/:eventId/cancel", controllers.CancelClubEvent)
+		r.Post("/:clubId/events/:eventId/reinstate", controllers.ReinstateClubEvent)
 		r.Delete("/:clubId/events/:eventId", controllers.DeleteClubEvent)
 		r.Delete("/:clubId/events/:eventId/series", controllers.DeleteClubEventSeries)
 		r.Put("/:clubId/events/:eventId/response", controllers.RespondToClubEvent)
